hphp/hack/test/typecheck/array/disallow_three_type_parameters_for_darray.php.exp
File "disallow_three_type_parameters_for_darray.php", line 3, characters 18-23:
Too many type arguments for this type (Naming[2065])
