hphp/hack/test/typecheck/array/disallow_three_type_parameters_for_darray.php
<?hh

function test(): darray<int, int, int> {
  return darray[];
}
